--- a/main.bib
+++ b/main.bib
@@ -2262,6 +2262,22 @@ MRREVIEWER = {Bj{\"o}rn Schuster},
 MRREVIEWER = {Joel M. Cohen},
 }
 
+@book {Kodaira,
+    AUTHOR = {Kodaira, Kunihiko},
+     TITLE = {Complex manifolds and deformation of complex structures},
+    SERIES = {Classics in Mathematics},
+   EDITION = {English},
+      NOTE = {Translated from the 1981 Japanese original by Kazuo Akao},
+ PUBLISHER = {Springer-Verlag, Berlin},
+      YEAR = {2005},
+     PAGES = {x+465},
+      ISBN = {3-540-22614-1},
+   MRCLASS = {32G05 (32-02)},
+  MRNUMBER = {2109686},
+       DOI = {10.1007/b138372},
+       URL = {https://doi.org/10.1007/b138372},
+}
+
 @article {Kohlhaase,
     AUTHOR = {Kohlhaase, Jan},
      TITLE = {On the {I}wasawa theory of the {L}ubin-{T}ate moduli space},
