add ligament in 3.2

--- a/finite.tex
+++ b/finite.tex
@@ -412,7 +412,7 @@ We now ground ourselves by fitting symmetric \(2\)--cocycles into a more general
 \cdots
 \end{tikzcd}
 \right\}.\]
-By applying the functor \(\InternalHom{FormalSchemes}(-, \G_a)(k)\), we get a cosimplicial abelian group stemming from the group scheme structure on \(\G_a\), and this gives a cochain complex of which we can take the \index{formal group!cohomology}cohomology.  In the case \(\G = \G_a\), the \(2\)--cocycles in this cochain complex are \emph{precisely} what we've been calling \(2\)--cocycles, so we may be interested in computing \(H^2\).  In particular, although the elements of \(H^2\) are \emph{not} required to be symmetric, we might find symmetry to be automatically enforced if \(H^2\) and \(B^2\) (and hence \(C^2\)) are sufficiently small.  Toward that end, we make the early remark that \(B^2\) is indeed very small: the generators \(x^k\) of \(C^1\) allow us to compute generators for \(B^2\) as \[d^1(x^k) = d_k c_k.\]
+By applying the functor \(\InternalHom{FormalSchemes}(-, \G_a)(k)\), we get a cosimplicial abelian group stemming from the group scheme structure on \(\G_a\), and this gives a cochain complex of which we can take the \index{formal group!cohomology}cohomology.  In the case \(\G = \G_a\), the \(2\)--cocycles in this cochain complex are \emph{precisely} what we've been calling \(2\)--cocycles, so we may be interested in computing \(H^2\).\footnote{See \Cref{KodairaSpencerDefn} for an extended discussion of what geometric objects are tracked by this modification of group cohomology.}  In particular, although the elements of \(H^2\) are \emph{not} required to be symmetric, we might find symmetry to be automatically enforced if \(H^2\) and \(B^2\) (and hence \(C^2\)) are sufficiently small.  Toward that end, we make the early remark that \(B^2\) is indeed very small: the generators \(x^k\) of \(C^1\) allow us to compute generators for \(B^2\) as \[d^1(x^k) = d_k c_k.\]
 
 Now we turn to the computation of \(H^2\).  First, using the standard coordinate on \(\G_a\), we can compute the above cochain complex to be \[C^* = \left\{ (0) \xrightarrow{\partial} (x_1) \xrightarrow{\partial} (x_1, x_2) \xrightarrow{\partial} \cdots \right\},\] where the indicated objects are ideals of \(k\), \(k\ps{x_1}\), \(k\ps{x_1, x_2}\), and so on.  The differential in this complex is given by the formula
 \begin{align*}
@@ -803,7 +803,7 @@ In light of \Cref{LubinTateStackInFGLTerms}, we can also state \Cref{LubinTateMo
 
 We will spend the rest of this Lecture working towards a proof of \Cref{LubinTateModuliThm}.  To set the stage for the proof, let us recount the construction of the \index{Kodaira--Spencer map}\textit{Kodaira--Spencer map}.
 
-\begin{definition}[cf.\ \cite{Kodaira}]
+\begin{definition}[cf.\ \cite{Kodaira}]\label{KodairaSpencerDefn}
 Suppose that \(\pi\co G \to S\) is a formal group over a scheme \(S\), and select a geometric point \(s \in S\) with fiber \(\Gamma = G_s\).  Let us analyze the structure of the induced map on tangent bundles \(D\pi\co TG \to TS\) at \(s\) by pulling it apart through various inverse images.  The inverse image \(D_s\pi^{-1}(0)\) consists of \(\Gamma = \pi^{-1}(s)\) and \(\Lie \Gamma\) in the form of the vertical part of the tangent space of \(G\) at \(s\).  In fact, since \(G\) is itself a formal group, \(D_s\pi^{-1}(0)\) decomposes into a split exact sequence of commutative formal groups \[0 \to \G_a \otimes \Lie \Gamma \to D_s\pi^{-1}(0) \to \Gamma \to 0.\]  For a generic tangent vector \(v\) based at \(s\), the inverse image \(D_s\pi^{-1}(v)\) again belongs to a short exact sequence of commutative formal groups with the same endpoints, but it need not split; instead, these extensions collectively assemble into a classifying map \[\mathit{KS}\co T_s S \to H^2(\Gamma; \G_a \otimes \Lie \Gamma).\]
 \end{definition}
 
