acknowledge changes since publication

--- a/preface.tex
+++ b/preface.tex
@@ -37,7 +37,7 @@ In addition to their inquisitive presences in the lecture hall, the students who
 
 More broadly, the following people contributed to the course just by attending, where I have highlighted those who additionally survived to the end of the semester: Colin Aitken, Adam Al-Natsheh, \textbf{Eva Belmont}, Jason Bland, Dorin Boger, \textbf{Lukas Brantner}, \textbf{Christian Carrick}, \textbf{Hood Chatham}, David Corwin, \textbf{Jun Hou Fung}, \textbf{Meng Guo}, \textbf{Jeremy Hahn}, Changho Han, Chi-Yun Hsu, \textbf{Erick Knight}, Benjamin Landon, Gabriel Long, Yusheng Luo, Jake Marcinek, \textbf{Jake McNamara}, \textbf{Akhil Mathew}, Max Menzies, Morgan Opie, Alexander Perry, Mauro Porta, \textbf{Krishanu Sankar}, \textbf{Jay Shah}, Ananth Shankar, \textbf{Danny Shi}, Koji Shimizu, Geoffrey Smith, Hunter Spinik, Philip Tynan, Yi Xie, David Yang, Zijian Yao, Lynnelle Ye, Chenglong Yu, \textbf{Allen Yuan}, Adrian Zahariuc, Yifei Zhao, Rong Zhou, and Yihang Zhu.  Their energy and enthusiasm were overwhelming---I felt duty-bound to keep telling them things they didn't already know, and despite my best efforts to keep out ahead I also felt like they were constantly nipping at my heels.  As I've gone through my notes during the editing process, it has been astonishing to see how reliably they asked exactly the right question at exactly the right time, often despite my own confusion.  They're a \emph{very} bright group.  Of the highlighted names, Erick Knight deserves special mention: he was an arithmetic geometer living among the rest of us topologists, and he attentively listened to me butcher his native field without once making me feel self-conscious.\footnote{Between him and Dorin, I do wonder if there's a Fossey-esque novel in the works: \textit{Topologists in the Mist}.  I hope we came across as gentle creatures, uncannily similar to proper mathematicians once they got to know us.}
 
-On top of the students, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Tilman Bauer, Jonathan Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Joe Harris, Mike Hill, Nitu Kitchloo, Johan Konter, Achim Krause, Kiran Luecke, Akhil Mathew, Jeroen van der Meer, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Piotr Pstr\k{a}gowski, Emily Riehl, Andrew Senger, Robert Smith, Reuben Stern, Sean Tilson, Dylan Wilson, and Steve Wilson.  Of course, Matt Ando, Mike Hopkins, and Nat Stapleton deserve further special mention as direct contributors of their respective sections.  Additionally, the referees and the publishers themselves have been enormously helpful in editing this into a passable document.
+On top of the students, various others have contributed in this way or that during the long production of this book, from repairing typos to long conversations and between.  Such helpful people include: Tobias Barthel, Tilman Bauer, Jonathan Beardsley, Martin Bendersky, Sanath Devalapurkar, Ben Gadoua, Joe Harris, Mike Hill, Nitu Kitchloo, Johan Konter, Achim Krause, Akhil Mathew, Pedro Mendes de Araujo, Denis Nardin, Justin Noel, Sune Precht Reeh, Emily Riehl, Andrew Senger, Robert Smith, Reuben Stern, Sean Tilson, Dylan Wilson, and Steve Wilson.  Of course, Matt Ando, Mike Hopkins, and Nat Stapleton deserve further special mention as direct contributors of their respective sections.  Additionally, the referees and the publishers themselves have been enormously helpful in editing this into a passable document.
 
 Lastly, but by far most importantly, this book---and, frankly, \emph{I}---would not have made it out of the gates without Samrita Dhindsa's love, support, and patience.  She made living in Boston a completely different experience: a balanced life instead of being quickly and totally overwhelmed by work, a lively circle of friends instead of what would have been a much smaller world, new experiences instead of worn-through ones, and love throughout.  Without her compassion, tenderness, and understanding I would not be half the open and vibrant person that I am today, and I would know so much less of myself.  It is awe-inspiring to think about, and it is a pleasure and an honor to acknowledge her like this and to dedicate this book to her.
 
@@ -47,3 +47,30 @@ Thanks to my many friends here, and thanks also to Thomas Dunning especially.  T
 \hspace{3em} ------------Eric
 
 \hspace{7em} May 27{\th}, 2017
+
+
+
+
+
+
+\cleardoublepage
+
+\subsection*{Changes since publication}
+
+It has now been some years since the publication of this text, and it has been very gratifying to see the uptick in readers' interest in this subject.  Of course, increased interest also brings with it corrections and addenda.  I would particularly like to thank Jonathan Beardsley, Hood Chatham, Jeremy Hahn, Kiran Luecke, Jeroen van der Meer, Piotr Pstr\k{a}gowski, and Allen Yuan for their insightful questions and contributions to the continued health of this document.  While most of the changes have been minor, the major differences from the published version are:
+
+\begin{itemize}
+    \item There were a pair of mutually cancelling errors in \Cref{StabilizingTheMUSteenrodOps}: the calculation leading up to \Cref{AjAndBjAreInTheFGLSubring} mistook the permutation representation for the reduced permutation representation, and so was missing a factor of \(x\); and \Cref{PCnOnUniversalMUClasses} was argued incorrectly, which hid this previous error.  These have both now been corrected.
+    \item \Cref{SectionMfgSmallScales} now makes use of the Kodaira--Spencer map to justify the precise form of the deformation complex.  Unfortunately, this modified some of the theorem numbering in this section.
+    \item \Cref{UnstableContextsSection} now contains figures depicting the \(E_2\)--pages of some unstable \(\HFtwo\)--Adams spectral sequences.
+    \item \Cref{JuvitopTalkSection} now includes most of the noncalculational details of the construction of the \(\String\)--orientation of \(\TMF\).  We have also expanded on the details of the lemmas concerning \(E_\infty\)--ring mapping spaces sourced on a Thom spectrum.
+\end{itemize}
+
+
+
+\vspace{2\baselineskip}
+\hspace{3em} ------------Eric
+
+
+
+
