--- a/quillen.tex
+++ b/quillen.tex
@@ -925,7 +925,7 @@ P^{C_n}(c_1(\L)) & = e(\L) \cdot \sum_{|\alpha| \le 1} w^{1 - |\alpha|} a_\alpha
 a_\alpha(t) & = \prod_{j=0}^\infty a_j(t)^{\alpha_j}.
 \end{align*}
 
-\begin{corollary}
+\begin{corollary}\label{PCnOnUniversalMUClasses}
 There is the universal formula \[P^{C_n}(\bar u_m) = \sum_{|\alpha| \le m} w^{m - |\alpha|} a_\alpha(t) s_\alpha(\bar u_m).\]
 \end{corollary}
 \begin{proof}
