more kiran corrections

--- a/preface.tex
+++ b/preface.tex
@@ -62,7 +62,7 @@ It has now been some years since the publication of this text, and it has been v
 \begin{itemize}
     \item There were a pair of mutually cancelling errors in \Cref{StabilizingTheMUSteenrodOps}: the calculation leading up to \Cref{AjAndBjAreInTheFGLSubring} mistook the permutation representation for the reduced permutation representation, and so was missing a factor of \(x\); and \Cref{PCnOnUniversalMUClasses} was argued incorrectly, which hid this previous error.  These have both now been corrected.
     \item \Cref{SectionMfgSmallScales} now makes use of the Kodaira--Spencer map to justify the precise form of the deformation complex.  Unfortunately, this modified some of the theorem numbering in this section.
-    \item \Cref{UnstableContextsSection} now contains figures depicting the \(E_2\)--pages of some unstable \(\HFtwo\)--Adams spectral sequences.
+    \item \Cref{UnstableContextsSection} now contains figures depicting the \(E_2\)--pages of some unstable \(\HFtwo\)--Adams spectral sequences.  These do not play into the main text, but the reader may find them intriguing all the same.
     \item \Cref{JuvitopTalkSection} now includes most of the noncalculational details of the construction of the \(\String\)--orientation of \(\TMF\).  We have also expanded on the details of the lemmas concerning \(E_\infty\)--ring mapping spaces sourced on a Thom spectrum.
 \end{itemize}
 
