--- a/quillen.tex
+++ b/quillen.tex
@@ -116,7 +116,7 @@ A \index{formal scheme!formal variety}\textit{formal affine variety} (of dimensi
 
 This definition allows local theorems from analytic differential geometry to be imported in coordinate-free language.  For instance, there is the following version of the \index{inverse function theorem}inverse function theorem:
 \begin{theorem}[Inverse function theorem, {\cite[Theorem I.8.1]{LazardCFGs}}]\label{InverseFunctionTheoremForFVars}
-A pointed map \(f\co V \to W\) of finite--dimensional formal varieties is an isomorphism if and only if the induced map \(T_0 f\co T_0 V \to T_0 W\) is an isomorphism of \(R\)--modules. \qed
+A pointed map \(f\co V \to W\) of finite--dimensional formal varieties is an isomorphism if and only if the induced map \(T_0 f\co T_0 V \to T_0 W\) on tangent spaces at the pointing is an isomorphism of \(R\)--modules. \qed
 \end{theorem}
 
 Coordinate-free theorems are only really useful if we can verify their hypotheses by coordinate-free methods as well.  The following two results are indispensible in this regard:
@@ -694,7 +694,7 @@ We now return to the setting of a general \(H_\infty\)--ring spectrum \(E\).  So
 \end{center}
 This construction is useful when studying composites of power operations: the group \(\Sigma_k \wr \Sigma_n \subseteq \Sigma_{nk}\) acts naturally on \((E^{\sm k})^{\sm n} \simeq E^{\sm nk}\), and indeed there is an equivalence \[P^{\Sigma_n} \circ P^{\Sigma_k} = P^{\Sigma_k \wr \Sigma_n}.\]  In order to understand these modified power operations more generally, we are motivated to study such maps \(\phi\) more seriously.  Some basic constructions are summarized in the following definition:
 \begin{definition}[{\cite[Sections XI.3 and XXV.3]{MayAlaskaNotes}, cf.\ also \cite[Section 6.1.6]{LurieHA}}]\label{EquivariantDefns}
-Let \(\phi\co G \to G'\) be an inclusion of finite groups and let \(F\) be an \(G'\)--spectrum.  There is a natural map of homotopy colimits \(\phi_*\co F_{hG} \to F_{hG'}\) which induces a \index{restriction}\textit{restriction map} on cohomology: \[\Res_G^{G'}\co E^0 F_{hG'} \to E^0 F_{hG}.\]  The spectrum \(\bigvee_{G'/G} F\) considered as a \(G'\)--spectrum with the diagonal \(G'\)--action has the property \((\bigvee_{G'/G} F)_{hG'} = F_{hG}\), and the \(G'\)--equivariant averaging map \[F \xrightarrow{\bigvee_{G'/G} \operatorname{id}} \bigvee_{G'/G} F\] passes on homotopy orbits to the \index{norm!equivariant}\textit{additive norm map} \(N_G^{G'}\co F_{hG'} \to F_{hG}\), which again induces a map on cohomology classes \[\Tr_G^{G'}\co E^0 F_{hG} \to E^0 F_{hG'}\] called the \textit{transfer map}.
+Let \(\phi\co G \to G'\) be an inclusion of finite groups and let \(F\) be an \(G'\)--spectrum.  There is a natural map of homotopy colimits \(\phi_*\co F_{hG} \to F_{hG'}\) which induces a \index{restriction}\textit{restriction map} on cohomology: \[\Res_G^{G'}\co E^0 F_{hG'} \to E^0 F_{hG}.\]  The spectrum \(\bigvee_{G'/G} F\) considered as a \(G'\)--spectrum via the inherited \(G'\)--action has the property \((\bigvee_{G'/G} F)_{hG'} = F_{hG}\), and the \(G'\)--equivariant averaging map \[F \xrightarrow{\bigvee_{G'/G} \operatorname{id}} \bigvee_{G'/G} F\] passes on homotopy orbits to the \index{norm!equivariant}\textit{additive norm map} \(N_G^{G'}\co F_{hG'} \to F_{hG}\), which again induces a map on cohomology classes \[\Tr_G^{G'}\co E^0 F_{hG} \to E^0 F_{hG'}\] called the \textit{transfer map}.
 \end{definition}
 
 The restriction and transfer maps appear prominently in the following formula, which measures the failure of the power operation construction to be additive:
@@ -748,7 +748,7 @@ The formation of the Tate spectrum is quite destructive.\footnote{The constructi
 X \arrow[equal]{u} \arrow{r} & X \arrow[equal]{u} \arrow["\Delta"]{r} & X^{\vee C_p} \arrow[equal]{u} \arrow["\mu"]{r} & X \arrow[equal]{u},
 \end{tikzcd}
 \end{center}
-where on the bottom row we have identified the homotopy orbits and fixed points of the wedge.  We claim that the norm map is an equivalence.  This diagram is natural in \(X\) and each node preserves cofiber sequences, so for finite \(X\) it suffices to check the claim on the spheres \(\S^n\).  Because we are norming up from the trivial group, the long horizontal composite is multiplication by \(|C_p| = p\).  We have thus factored \(p \in \pi_0 \End \S^n = \Z\) as some map followed by the diagonal and fold maps, which themselves compose to \(p\).  This forces the norm map itself to be an equivalence, and hence the cofiber sequence \[(X^{\vee C_p})_{hC_p} \xrightarrow{\simeq} (X^{\vee C_p})^{hC_p} \to (X^{\vee C_p})^{tC_p}\] causes \((X^{\vee C_p})^{tC_p}\) to be contractible.
+where on the bottom row we have identified the homotopy orbits and fixed points of the wedge.  We claim that the factored norm map is an equivalence.  This diagram is natural in \(X\) and each node preserves cofiber sequences, so for finite \(X\) it suffices to check the claim on the spheres \(\S^n\).  Because we are norming up from the trivial group, the long horizontal composite is multiplication by \(|C_p| = p\).  We have thus factored \(p \in \pi_0 \End \S^n = \Z\) as some map followed by the diagonal and fold maps, which themselves compose to \(p\).  This forces the factored norm map itself to be an equivalence, and hence the cofiber sequence \[(X^{\vee C_p})_{hC_p} \xrightarrow{\simeq} (X^{\vee C_p})^{hC_p} \to (X^{\vee C_p})^{tC_p}\] causes \((X^{\vee C_p})^{tC_p}\) to be contractible.
 \end{example}
 
 As another example of the destructiveness of the Tate operation, we have the following:
@@ -801,7 +801,7 @@ Consider the \(C_p\)--equivariant cofiber sequence \[S(\C^m)_+ \to S^0 \to S^{\C
     \item The following Tate objects vanish: \((MU \sm S(\C^m)_+)^{tC_p} \simeq *\).  As in \Cref{TateDestruction}, this is because the Tate construction vanishes on free \(C_p\)--cells.
     \item We can use \(\colim_{m \to \infty} S(\C^m)_+\) as a model for \(EC_p\), so that \[MU_{hC_p} = \left( \colim_{m \to \infty} MU \sm S(\C^m)_+ \right)_{hC_p}.\]
     \item Coupling these two facts together, we get \[MU_{hC_p} = \left( \colim_{m \to \infty} MU \sm S(\C^m)_+ \right)_{hC_p} = \left( \colim_{m \to \infty} MU \sm S(\C^m)_+ \right)^{hC_p}.\]
-    \item Pulling the fixed points functor out, this gives
+    \item Commuting finite limits through sequential colimits in order to pull the fixed points functor out, this gives
     \begin{align*}
     MU^{tC_p} & = \cofib(MU_{hC_p} \to MU^{hC_p}) \\
     & = \cofib\left(\left( \colim_{m \to \infty} MU \sm S(\C^m)_+ \right)^{hC_p} \to MU^{hC_p}\right) \\
