--- a/preamble.tex
+++ b/preamble.tex
@@ -1,6 +1,9 @@
 % -*- root: main.tex -*-
 
 % \usepackage{showframe}
+% turn these off if you ever resubmit to CUP
+\usepackage{geometry}
+\geometry{paperwidth=6in,paperheight=9in}
 
 %%% Created by texsupport 20/09/2017
 
