fix another load of kiran comments

--- a/sigma.tex
+++ b/sigma.tex
@@ -204,12 +204,12 @@ The topological maps
 BU & \to \Z \times BU, &
 MU & \to \MUP
 \end{align*}
-induce recognizable algebro-geometric maps upon application of \(\Spec E_0(-)\).  The comparison map \[(\Spec E_0(\Z \times BU))(T) \to \InternalHom{FormalSchemes}(\CP^\infty_E, \Gm)\] reads off the image of a map \[f\co E_0(\Z \times BU) \cong E_0[b_0^\pm, b_1, \ldots] \to T\] as the components of a function \(\sum_j f(b_0^j b_j) x^j \in T \otimes \sheaf O_{\CP^\infty_E}\), whereas the comparison map for \(BU\) reads off the image of a map \[g\co E_0(BU) \cong E_0[b_0^\pm, b_1, b_2, \ldots] / (b_0 = 1) \to T\] as the components of a function \(\sum_j g(b_j)x^j\), effecting a normalizing division by \(b_0\), itself the image of \(\CP^0_E \subseteq \CP^\infty_E\) in \(\Gm\).  Geometrically, this gives the commuting square
+induce recognizable algebro-geometric maps upon application of \(\Spec E_0(-)\).  The comparison map \[(\Spec E_0(\Z \times BU))(T) \to \InternalHom{FormalSchemes}(\CP^\infty_E, \Gm)(T)\] reads off the image of a map \[f\co E_0(\Z \times BU) \cong E_0[b_0^\pm, b_1, \ldots] \to T\] as the components of a function \(\sum_j f(b_0^j b_j) x^j \in T \otimes \sheaf O_{\CP^\infty_E}\), whereas the comparison map for \(BU\) reads off the image of a map \[g\co E_0(BU) \cong E_0[b_0^\pm, b_1, b_2, \ldots] / (b_0 = 1) \to T\] as the components of a function \(\sum_j g(b_j)x^j\), effecting a normalizing division by \(b_0\), itself the image of \(\CP^0_E \subseteq \CP^\infty_E\) in \(\Gm\).  Geometrically, this gives the commuting square
 \begin{center}
 \begin{tikzcd}
 \Spec E_0(\Z \times BU) \arrow{r} \arrow[equal]{d} & \Spec E_0(BU) \arrow[equal]{d} \\
 \InternalHom{FormalSchemes}(\CP^\infty_E, \Gm) \arrow{r} & \InternalHom{FormalSchemes}_{*/}(\CP^\infty_E, \Gm) \\
-f(t) \arrow[|->]{r} & f(t) / f(0).
+f(t) \arrow[|->]{r} & f(t) / f'(0).
 \end{tikzcd}
 \end{center}
 
